Fix invisible tasks by changing font color to white

--- a/src/app/tasks.css
+++ b/src/app/tasks.css
@@ -70,6 +70,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: flex-start; /* Linksbündige Ausrichtung */
+  color: white;
 }
 
 li h2 {
